--- a/Styling/main.css
+++ b/Styling/main.css
@@ -1,10 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   box-sizing:border-box;
-  font-family: Arial, Helvetica;
+  font-family: 'Karla';
+
   }
-  
+ 
+
+  .flex-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+ }
+ 
+ .card{
+    background: #FFF;
+    width: 250px;
+    margin: 20px;
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.05);
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 5px;
+ }
+ 
+ .img{
+    height: 200px;
+    width: 100%;
+    
+    border-radius: 5px;
+    background-size: cover;
+ }
+ 
+ main a{
+    padding: 10px;
+    width: 100%;
+    display: block;
+    text-align: center;
+    background: #333EFF20;
+    box-sizing: border-box;
+    border-radius: 4px;
+    color: #333eFF;
+    text-decoration: none;
+    font-size: 15px;
+ }
+
+  body{
+    background: #F4F5FA;
+ }
+
   header {
     display: flex;
     justify-content: flex-end;
